Fixed overflow on project pages causing blank space by sidebar

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -87,7 +87,7 @@
 }
 
 .notion-collection-card {
-  overflow: visible;
+  overflow: hidden;
 }
 
 .notion-collection-card-cover {
